--- a/lessons/hands-on-nethack/NetHackProlog.ipynb
+++ b/lessons/hands-on-nethack/NetHackProlog.ipynb
@@ -254,7 +254,7 @@
    "outputs": [],
    "source": [
     "KB = Prolog()\n",
-    "KB.consult('simple_rules.pl')"
+    "KB.consult(\"simple_rules.pl\")"
    ]
   },
   {
@@ -369,9 +369,9 @@
     "W = 10\n",
     "NUM_EPISODES = 15\n",
     "MAX_STEPS = 30\n",
-    "MONSTER = 'kobold'\n",
-    "WEAPON = 'tsurugi'\n",
-    "PATH = 'kb.pl'"
+    "MONSTER = \"kobold\"\n",
+    "WEAPON = \"tsurugi\"\n",
+    "PATH = \"kb.pl\""
    ]
   },
   {
@@ -404,11 +404,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = gym.make('MiniHack-Skill-Custom-v0',\n",
-    "               character=\"sam-hum-neu-mal\",\n",
-    "               observation_keys=('screen_descriptions','inv_strs','blstats','message','pixel'),\n",
-    "               des_file=des_file,\n",
-    "               reward_manager=reward_manager)"
+    "env = gym.make(\n",
+    "    \"MiniHack-Skill-Custom-v0\",\n",
+    "    character=\"sam-hum-neu-mal\",\n",
+    "    observation_keys=(\"screen_descriptions\", \"inv_strs\", \"blstats\", \"message\", \"pixel\"),\n",
+    "    des_file=des_file,\n",
+    "    reward_manager=reward_manager,\n",
+    ")"
    ]
   },
   {
@@ -427,7 +429,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(obs['pixel'][115:275, 480:750])"
+    "plt.imshow(obs[\"pixel\"][115:275, 480:750])"
    ]
   },
   {
@@ -473,20 +475,20 @@
     "    ep_states = []\n",
     "\n",
     "    obs = env.reset()\n",
-    "    ep_states.append(obs['pixel'])\n",
+    "    ep_states.append(obs[\"pixel\"])\n",
     "    done = False\n",
     "\n",
     "    # Main loop\n",
     "    while not done and steps < MAX_STEPS:\n",
-    "        # Get the observation from the env and assert the facts in the kb \n",
+    "        # Get the observation from the env and assert the facts in the kb\n",
     "        process_state(obs, KB, MONSTER, WEAPON)\n",
     "\n",
     "        # Query Prolog\n",
     "        # Run the inference and get the action to perform\n",
     "        # Get the first answer from Prolog -> the top-priority action\n",
     "        try:\n",
-    "            action = list(KB.query('action(X)'))[0]\n",
-    "            action = action['X']\n",
+    "            action = list(KB.query(\"action(X)\"))[0]\n",
+    "            action = action[\"X\"]\n",
     "            # print(f'>> Current action from Prolog: {action}')\n",
     "        except Exception as e:\n",
     "            action = None\n",
@@ -494,10 +496,12 @@
     "        # Perform the action in the environment\n",
     "        if action:\n",
     "            obs, reward, done, info = perform_action(action, env)\n",
-    "            ep_states.append(obs['pixel'])\n",
+    "            ep_states.append(obs[\"pixel\"])\n",
     "            # env.render()\n",
     "        else:\n",
-    "            print(\"ERROR: impossible to perform any action. Please check assertions and definitions in KB.\")\n",
+    "            print(\n",
+    "                \"ERROR: impossible to perform any action. Please check assertions and definitions in KB.\"\n",
+    "            )\n",
     "            break\n",
     "\n",
     "        steps += 1\n",
@@ -505,19 +509,19 @@
     "    # Display game with interface\n",
     "    show_match(ep_states)\n",
     "    # Print information about the ended episode\n",
-    "    print(f'Episode {episode} - {steps} steps')\n",
+    "    print(f\"Episode {episode} - {steps} steps\")\n",
     "    print(f'End status: {info[\"end_status\"].name}')\n",
-    "    print(f'Final reward: {reward}')\n",
+    "    print(f\"Final reward: {reward}\")\n",
     "    time.sleep(0.75)\n",
     "\n",
     "    rewards.append(reward)\n",
     "\n",
     "    # reset the environment and retract axioms that may cause errors\n",
     "    obs = env.reset()\n",
-    "    KB.retractall('stepping_on(agent,_,_)')\n",
+    "    KB.retractall(\"stepping_on(agent,_,_)\")\n",
     "\n",
     "\n",
-    "print(f'After {NUM_EPISODES} episodes, mean return is {sum(rewards)/NUM_EPISODES}')\n",
+    "print(f\"After {NUM_EPISODES} episodes, mean return is {sum(rewards)/NUM_EPISODES}\")\n",
     "print(\"The rewards of the episodes are:\", rewards)"
    ]
   },
