--- a/lessons/hands-on-nethack/NetHackProlog1.ipynb
+++ b/lessons/hands-on-nethack/NetHackProlog1.ipynb
@@ -83,6 +83,7 @@
    "outputs": [],
    "source": [
     "from pyswip import Prolog\n",
+    "\n",
     "KB = Prolog()\n",
     "\n",
     "KB.assertz(\"father(michael,john)\")\n",
@@ -305,7 +306,7 @@
    "outputs": [],
    "source": [
     "KB = Prolog()\n",
-    "KB.consult('simple_rules.pl')"
+    "KB.consult(\"simple_rules.pl\")"
    ]
   },
   {
@@ -447,9 +448,9 @@
     "W = 10\n",
     "NUM_EPISODES = 5\n",
     "MAX_STEPS = 30\n",
-    "MONSTER = 'kobold'\n",
-    "WEAPON = 'tsurugi'\n",
-    "PATH = 'kb.pl'"
+    "MONSTER = \"kobold\"\n",
+    "WEAPON = \"tsurugi\"\n",
+    "PATH = \"kb.pl\""
    ]
   },
   {
@@ -482,11 +483,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = gym.make('MiniHack-Skill-Custom-v0',\n",
-    "               character=\"sam-hum-neu-mal\",\n",
-    "               observation_keys=('screen_descriptions','inv_strs','blstats','message','pixel'),\n",
-    "               des_file=des_file,\n",
-    "               reward_manager=reward_manager)"
+    "env = gym.make(\n",
+    "    \"MiniHack-Skill-Custom-v0\",\n",
+    "    character=\"sam-hum-neu-mal\",\n",
+    "    observation_keys=(\"screen_descriptions\", \"inv_strs\", \"blstats\", \"message\", \"pixel\"),\n",
+    "    des_file=des_file,\n",
+    "    reward_manager=reward_manager,\n",
+    ")"
    ]
   },
   {
@@ -558,7 +561,7 @@
     }
    ],
    "source": [
-    "plt.imshow(obs['pixel'][115:275, 480:750])"
+    "plt.imshow(obs[\"pixel\"][115:275, 480:750])"
    ]
   },
   {
@@ -631,7 +634,7 @@
     }
    ],
    "source": [
-    "obs['screen_descriptions'].shape"
+    "obs[\"screen_descriptions\"].shape"
    ]
   },
   {
@@ -663,12 +666,12 @@
     "    ep_states = []\n",
     "\n",
     "    obs = env.reset()\n",
-    "    ep_states.append(obs['pixel'])\n",
+    "    ep_states.append(obs[\"pixel\"])\n",
     "    done = False\n",
     "\n",
     "    # Main loop\n",
     "    while not done and steps < MAX_STEPS:\n",
-    "        # Get the observation from the env and assert the facts in the kb \n",
+    "        # Get the observation from the env and assert the facts in the kb\n",
     "        process_state(obs, KB, MONSTER, WEAPON)\n",
     "\n",
     "        # Query Prolog\n",
@@ -677,7 +680,7 @@
     "        try:\n",
     "            # TODO:\n",
     "            action = ...\n",
-    "            action = action['X']\n",
+    "            action = action[\"X\"]\n",
     "            # print(f'>> Current action from Prolog: {action}')\n",
     "        except Exception as e:\n",
     "            action = None\n",
@@ -685,10 +688,12 @@
     "        # Perform the action in the environment\n",
     "        if action:\n",
     "            obs, reward, done, info = perform_action(action, env)\n",
-    "            ep_states.append(obs['pixel'])\n",
+    "            ep_states.append(obs[\"pixel\"])\n",
     "            # env.render()\n",
     "        else:\n",
-    "            print(\"ERROR: impossible to perform any action. Please check assertions and definitions in KB.\")\n",
+    "            print(\n",
+    "                \"ERROR: impossible to perform any action. Please check assertions and definitions in KB.\"\n",
+    "            )\n",
     "            break\n",
     "\n",
     "        steps += 1\n",
@@ -696,19 +701,19 @@
     "    # Display game with interface\n",
     "    show_match(ep_states)\n",
     "    # Print information about the ended episode\n",
-    "    print(f'Episode {episode} - {steps} steps')\n",
+    "    print(f\"Episode {episode} - {steps} steps\")\n",
     "    print(f'End status: {info[\"end_status\"].name}')\n",
-    "    print(f'Final reward: {reward}')\n",
+    "    print(f\"Final reward: {reward}\")\n",
     "    time.sleep(0.75)\n",
     "\n",
     "    rewards.append(reward)\n",
     "\n",
     "    # reset the environment and retract axioms that may cause errors\n",
     "    obs = env.reset()\n",
-    "    KB.retractall('stepping_on(agent,_,_)')\n",
+    "    KB.retractall(\"stepping_on(agent,_,_)\")\n",
     "\n",
     "\n",
-    "print(f'After {NUM_EPISODES} episodes, mean return is {sum(rewards)/NUM_EPISODES}')\n",
+    "print(f\"After {NUM_EPISODES} episodes, mean return is {sum(rewards)/NUM_EPISODES}\")\n",
     "print(\"The rewards of the episodes are:\", rewards)"
    ]
   },
