--- a/lessons/hands-on-problog/Problog.ipynb
+++ b/lessons/hands-on-problog/Problog.ipynb
@@ -216,13 +216,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = PrologString(\"\"\"\n",
+    "p = PrologString(\n",
+    "    \"\"\"\n",
     "coin(c1).\n",
     "coin(c2).\n",
     "0.4::heads(C); 0.6::tails(C) :- coin(C).\n",
     "win :- heads(C).\n",
     "query(win).\n",
-    "\"\"\")"
+    "\"\"\"\n",
+    ")"
    ]
   },
   {
@@ -305,13 +307,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coin,heads,tails,win,query = Term('coin'),Term('heads'),Term('tails'),Term('win'),Term('query')\n",
-    "C = Var('C')\n",
+    "coin, heads, tails, win, query = (\n",
+    "    Term(\"coin\"),\n",
+    "    Term(\"heads\"),\n",
+    "    Term(\"tails\"),\n",
+    "    Term(\"win\"),\n",
+    "    Term(\"query\"),\n",
+    ")\n",
+    "C = Var(\"C\")\n",
     "p = SimpleProgram()\n",
-    "p += coin(Constant('c1'))\n",
-    "p += coin(Constant('c2'))\n",
-    "p += AnnotatedDisjunction([heads(C,p=0.4), tails(C,p=0.6)], coin(C))\n",
-    "p += (win << heads(C))\n",
+    "p += coin(Constant(\"c1\"))\n",
+    "p += coin(Constant(\"c2\"))\n",
+    "p += AnnotatedDisjunction([heads(C, p=0.4), tails(C, p=0.6)], coin(C))\n",
+    "p += win << heads(C)\n",
     "p += query(win)\n",
     "\n",
     "get_evaluatable().create_from(p).evaluate()"
@@ -337,7 +345,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t2 = PrologString(\"\"\"\n",
+    "t2 = PrologString(\n",
+    "    \"\"\"\n",
     "0.8::stress(ann).\n",
     "0.4::stress(bob).\n",
     "0.6::influences(ann,bob).\n",
@@ -348,7 +357,8 @@
     "\n",
     "query(smokes(carl)).\n",
     "query(smokes(bob)).\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "get_evaluatable().create_from(t2).evaluate()\n",
     "# probability that bob smokes is that Bob is tressed (0.4) or that he's not stressed (0.6) and Ann is stressed (0.8) and that Ann influences Bob (0.6)"
    ]
@@ -359,7 +369,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t3 = PrologString(\"\"\"\n",
+    "t3 = PrologString(\n",
+    "    \"\"\"\n",
     "0.4 :: heads.\n",
     "\n",
     "0.3 :: col(1,red); 0.7 :: col(1,blue).\n",
@@ -373,7 +384,8 @@
     "query(col(1,_)).\n",
     "query(col(2,_)).\n",
     "evidence(col(2,green)).\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "get_evaluatable().create_from(t3).evaluate()\n",
     "# win = 0.12 = 0.4*0.3 = probability of heads and red on color 1 assuming that color 2 is green"
    ]
@@ -384,12 +396,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t3 = PrologString(\"\"\"\n",
+    "t3 = PrologString(\n",
+    "    \"\"\"\n",
     "0.5::weather(sun,0) ; 0.5::weather(rain,0).\n",
     "0.6::weather(sun,T) ; 0.4::weather(rain,T) :- T>0, Tprev is T-1, weather(sun,Tprev).\n",
     "0.2::weather(sun,T) ; 0.8::weather(rain,T) :- T>0, Tprev is T-1, weather(rain,Tprev).\n",
     "query(weather(_,10)).\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "get_evaluatable().create_from(t3).evaluate()"
    ]
   },
@@ -436,14 +450,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = PrologString(\"\"\"\n",
+    "t = PrologString(\n",
+    "    \"\"\"\n",
     "0.6::difficult ; 0.7::smart.\n",
     "0.85::success :- difficult, smart.\n",
     "0.1::success :- difficult, \\+smart.\n",
     "0.98::success :- \\+difficult, smart.\n",
     "0.45::success :- \\+difficult, \\+smart.\n",
     "query(success).\n",
-    "\"\"\")\n",
+    "\"\"\"\n",
+    ")\n",
     "get_evaluatable().create_from(t).evaluate()"
    ]
   },
