--- a/lessons/hands-on-search/HandsOn-Search.ipynb
+++ b/lessons/hands-on-search/HandsOn-Search.ipynb
@@ -43,8 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#python3 -m venv minihack\n",
-    "#source minihack/bin/activate"
+    "# python3 -m venv minihack\n",
+    "# source minihack/bin/activate"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install nle"
+    "# pip install nle"
    ]
   },
   {
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install minihack"
+    "# pip install minihack"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install matplotlib notebook"
+    "# pip install matplotlib notebook"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#jupyter notebook"
+    "# jupyter notebook"
    ]
   },
   {
@@ -245,7 +245,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = gym.make(\"MiniHack-ExploreMaze-Easy-Mapped-v0\", observation_keys=(\"chars\", \"pixel\"))\n",
+    "env = gym.make(\n",
+    "    \"MiniHack-ExploreMaze-Easy-Mapped-v0\", observation_keys=(\"chars\", \"pixel\")\n",
+    ")\n",
     "state = env.reset()\n",
     "env.render()"
    ]
@@ -265,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "state['chars'].shape, state['pixel'].shape"
+    "state[\"chars\"].shape, state[\"pixel\"].shape"
    ]
   },
   {
@@ -283,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(state['pixel'])"
+    "plt.imshow(state[\"pixel\"])"
    ]
   },
   {
@@ -350,7 +352,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = gym.make(\"MiniHack-ExploreMaze-Hard-Mapped-v0\", observation_keys=(\"chars\", \"pixel\"))\n",
+    "env = gym.make(\n",
+    "    \"MiniHack-ExploreMaze-Hard-Mapped-v0\", observation_keys=(\"chars\", \"pixel\")\n",
+    ")\n",
     "state = env.reset()\n",
     "env.render()"
    ]
@@ -370,7 +374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(state['pixel'][25:300, :475])"
+    "plt.imshow(state[\"pixel\"][25:300, :475])"
    ]
   },
   {
@@ -388,8 +392,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "game_map = state['chars']\n",
-    "game = state['pixel']"
+    "game_map = state[\"chars\"]\n",
+    "game = state[\"pixel\"]"
    ]
   },
   {
@@ -527,7 +531,7 @@
     "    s, _, _, _ = env.step(action)\n",
     "    display.display(plt.gcf())\n",
     "    display.clear_output(wait=True)\n",
-    "    image.set_data(s['pixel'][25:300, :475])"
+    "    image.set_data(s[\"pixel\"][25:300, :475])"
    ]
   },
   {
@@ -558,7 +562,7 @@
     "env = gym.make(\n",
     "    \"MiniHack-Navigation-Custom-v0\",\n",
     "    observation_keys=(\"chars\", \"pixel\"),\n",
-    "    des_file = \"simple_maze.des\",\n",
+    "    des_file=\"simple_maze.des\",\n",
     ")\n",
     "state = env.reset()\n",
     "env.render()"
@@ -571,7 +575,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(state['pixel'][75:300, 450:800])"
+    "plt.imshow(state[\"pixel\"][75:300, 450:800])"
    ]
   },
   {
@@ -581,8 +585,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "game_map = state['chars']\n",
-    "game = state['pixel']\n",
+    "game_map = state[\"chars\"]\n",
+    "game = state[\"pixel\"]\n",
     "start = get_player_location(game_map)\n",
     "target = get_target_location(game_map)\n",
     "print(start)"
@@ -630,7 +634,7 @@
     "    s, _, _, _ = env.step(action)\n",
     "    display.display(plt.gcf())\n",
     "    display.clear_output(wait=True)\n",
-    "    image.set_data(s['pixel'][75:300, 450:800])"
+    "    image.set_data(s[\"pixel\"][75:300, 450:800])"
    ]
   },
   {
@@ -651,7 +655,7 @@
     "env = gym.make(\n",
     "    \"MiniHack-Navigation-Custom-v0\",\n",
     "    observation_keys=(\"chars\", \"pixel\"),\n",
-    "    des_file = \"complex_maze.des\",\n",
+    "    des_file=\"complex_maze.des\",\n",
     ")\n",
     "state = env.reset()\n",
     "env.render()"
@@ -664,7 +668,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(state['pixel'][:, 300:975])"
+    "plt.imshow(state[\"pixel\"][:, 300:975])"
    ]
   },
   {
@@ -674,8 +678,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "game_map = state['chars']\n",
-    "game = state['pixel']\n",
+    "game_map = state[\"chars\"]\n",
+    "game = state[\"pixel\"]\n",
     "start = get_player_location(game_map)\n",
     "target = get_target_location(game_map)"
    ]
@@ -713,7 +717,7 @@
     "    s, _, _, _ = env.step(action)\n",
     "    display.display(plt.gcf())\n",
     "    display.clear_output(wait=True)\n",
-    "    image.set_data(s['pixel'][:, 300:975])"
+    "    image.set_data(s[\"pixel\"][:, 300:975])"
    ]
   },
   {
@@ -783,7 +787,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = gym.make(\"MiniHack-ExploreMaze-Hard-Mapped-v0\", observation_keys=(\"chars\", \"pixel\"))\n",
+    "env = gym.make(\n",
+    "    \"MiniHack-ExploreMaze-Hard-Mapped-v0\", observation_keys=(\"chars\", \"pixel\")\n",
+    ")\n",
     "state = env.reset()\n",
     "env.render()"
    ]
@@ -795,7 +801,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(state['pixel'][25:300, :475])"
+    "plt.imshow(state[\"pixel\"][25:300, :475])"
    ]
   },
   {
@@ -805,8 +811,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "game_map = state['chars']\n",
-    "game = state['pixel']"
+    "game_map = state[\"chars\"]\n",
+    "game = state[\"pixel\"]"
    ]
   },
   {
@@ -840,6 +846,7 @@
    "outputs": [],
    "source": [
     "from queue import PriorityQueue\n",
+    "\n",
     "q = PriorityQueue()\n",
     "q.put(3)\n",
     "q.qsize()"
@@ -885,7 +892,7 @@
     "    s, _, _, _ = env.step(action)\n",
     "    display.display(plt.gcf())\n",
     "    display.clear_output(wait=True)\n",
-    "    image.set_data(s['pixel'][25:300, :475])"
+    "    image.set_data(s[\"pixel\"][25:300, :475])"
    ]
   },
   {
@@ -906,7 +913,7 @@
     "env = gym.make(\n",
     "    \"MiniHack-Navigation-Custom-v0\",\n",
     "    observation_keys=(\"chars\", \"pixel\"),\n",
-    "    des_file = \"simple_maze.des\",\n",
+    "    des_file=\"simple_maze.des\",\n",
     ")\n",
     "state = env.reset()\n",
     "env.render()"
@@ -919,7 +926,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(state['pixel'][75:300, 450:800])"
+    "plt.imshow(state[\"pixel\"][75:300, 450:800])"
    ]
   },
   {
@@ -929,8 +936,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "game_map = state['chars']\n",
-    "game = state['pixel']\n",
+    "game_map = state[\"chars\"]\n",
+    "game = state[\"pixel\"]\n",
     "start = get_player_location(game_map)\n",
     "target = get_target_location(game_map)"
    ]
@@ -968,7 +975,7 @@
     "    s, _, _, _ = env.step(action)\n",
     "    display.display(plt.gcf())\n",
     "    display.clear_output(wait=True)\n",
-    "    image.set_data(s['pixel'][75:300, 450:800])"
+    "    image.set_data(s[\"pixel\"][75:300, 450:800])"
    ]
   },
   {
@@ -989,7 +996,7 @@
     "env = gym.make(\n",
     "    \"MiniHack-Navigation-Custom-v0\",\n",
     "    observation_keys=(\"chars\", \"pixel\"),\n",
-    "    des_file = \"complex_maze.des\",\n",
+    "    des_file=\"complex_maze.des\",\n",
     ")\n",
     "state = env.reset()\n",
     "env.render()"
@@ -1002,7 +1009,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(state['pixel'][:, 300:975])"
+    "plt.imshow(state[\"pixel\"][:, 300:975])"
    ]
   },
   {
@@ -1012,8 +1019,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "game_map = state['chars']\n",
-    "game = state['pixel']\n",
+    "game_map = state[\"chars\"]\n",
+    "game = state[\"pixel\"]\n",
     "start = get_player_location(game_map)\n",
     "target = get_target_location(game_map)"
    ]
@@ -1051,7 +1058,7 @@
     "    s, _, _, _ = env.step(action)\n",
     "    display.display(plt.gcf())\n",
     "    display.clear_output(wait=True)\n",
-    "    image.set_data(s['pixel'][:, 300:975])"
+    "    image.set_data(s[\"pixel\"][:, 300:975])"
    ]
   },
   {
@@ -1081,7 +1088,7 @@
     "env = gym.make(\n",
     "    \"MiniHack-Navigation-Custom-v0\",\n",
     "    observation_keys=(\"chars\", \"pixel_crop\"),\n",
-    "    des_file = \"complex_maze.des\",\n",
+    "    des_file=\"complex_maze.des\",\n",
     ")\n",
     "state = env.reset()\n",
     "env.render()"
@@ -1094,7 +1101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(state['pixel_crop'])"
+    "plt.imshow(state[\"pixel_crop\"])"
    ]
   },
   {
@@ -1104,8 +1111,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "game_map = state['chars']\n",
-    "game = state['pixel_crop']\n",
+    "game_map = state[\"chars\"]\n",
+    "game = state[\"pixel_crop\"]\n",
     "start = get_player_location(game_map)\n",
     "target = get_target_location(game_map)"
    ]
@@ -1143,7 +1150,7 @@
     "    s, _, _, _ = env.step(action)\n",
     "    display.display(plt.gcf())\n",
     "    display.clear_output(wait=True)\n",
-    "    image.set_data(s['pixel_crop'])"
+    "    image.set_data(s[\"pixel_crop\"])"
    ]
   },
   {
