--- a/project/presentation.ipynb
+++ b/project/presentation.ipynb
@@ -111,9 +111,9 @@
     "# action_map = {\"N\": 0, \"E\": 1, \"S\": 2, \"W\": 3}\n",
     "# generic loop: 1, 1, 0, 0, 3, 3, 2, 2\n",
     "\n",
-    "plt.rcParams[\"figure.figsize\"] = [18, 7]\n",
+    "plt.rcParams[\"figure.figsize\"] = [5, 5]\n",
     "\n",
-    "image = plt.imshow(game[:, 350:1200])\n",
+    "image = plt.imshow(game[110:220, 540:690])\n",
     "actions = [1, 0, 1, 1, 0, 0, 3, 3, 2, 2]\n",
     "\n",
     "for i, action in enumerate(actions):\n",
@@ -121,7 +121,7 @@
     "        s, _, _, _ = env.step(action)\n",
     "        display.display(plt.gcf())\n",
     "        display.clear_output(wait=True)\n",
-    "        image.set_data(s[\"pixel\"][:, 350:1200])\n",
+    "        image.set_data(s[\"pixel\"][110:220, 540:690])\n",
     "        # time.sleep(0.1)\n",
     "    except RuntimeError:\n",
     "        print(\"YOU WON! <3\")"
@@ -133,7 +133,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dead ends"
+    "# Loops animation: 2 loops\n",
+    "# action_map = {\"N\": 0, \"E\": 1, \"S\": 2, \"W\": 3}\n",
+    "\n",
+    "state = env.reset()\n",
+    "plt.rcParams[\"figure.figsize\"] = [5, 5]\n",
+    "\n",
+    "image = plt.imshow(game[110:220, 540:690])\n",
+    "actions = [1, 0, 1, 1, 0, 0, 3, 3, 2, 2, 3, 0, 0, 2]\n",
+    "\n",
+    "for i, action in enumerate(actions):\n",
+    "    try:\n",
+    "        s, _, _, _ = env.step(action)\n",
+    "        display.display(plt.gcf())\n",
+    "        display.clear_output(wait=True)\n",
+    "        image.set_data(s[\"pixel\"][110:220, 540:690])\n",
+    "        if i < 9:\n",
+    "            plt.title(f\"Loops: 0\")\n",
+    "        elif i < 13:\n",
+    "            plt.title(f\"Loops: 1\")\n",
+    "        else:\n",
+    "            plt.title(f\"Loops: 2\")\n",
+    "    except RuntimeError:\n",
+    "        print(\"YOU WON! <3\")"
    ]
   },
   {
@@ -142,8 +164,101 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Wrong actions"
+    "# Dead ends\n",
+    "plt.rcParams[\"figure.figsize\"] = [10, 5]\n",
+    "# set dpi to 500\n",
+    "plt.rcParams[\"figure.dpi\"] = 500\n",
+    "env = gym.make(\n",
+    "    \"MiniHack-Navigation-Custom-v0\",\n",
+    "    observation_keys=(\"chars\", \"pixel\"),\n",
+    "    des_file=\"maps/dead_ends.des\",\n",
+    "    max_episode_steps=10000,\n",
+    ")\n",
+    "state = env.reset()\n",
+    "# env.render()\n",
+    "plt.imshow(state[\"pixel\"], aspect=\"auto\").set_data(state[\"pixel\"][:, 300:950])  # type: ignore"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dead-ends animation\n",
+    "# action_map = {\"N\": 0, \"E\": 1, \"S\": 2, \"W\": 3}\n",
+    "# dead-end: 0, 0, 1, 1, 1, 3, 3, 3, 0\n",
+    "\n",
+    "plt.rcParams[\"figure.figsize\"] = [5, 5]\n",
+    "\n",
+    "image = plt.imshow(game[110:220, 540:690])\n",
+    "actions = [0, 0, 1, 1, 1, 3, 3, 3, 0]\n",
+    "\n",
+    "for i, action in enumerate(actions):\n",
+    "    try:\n",
+    "        s, _, _, _ = env.step(action)\n",
+    "        display.display(plt.gcf())\n",
+    "        display.clear_output(wait=True)\n",
+    "        image.set_data(s[\"pixel\"][110:220, 540:690])\n",
+    "        # time.sleep(0.1)\n",
+    "    except RuntimeError:\n",
+    "        print(\"YOU WON! <3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Wrong actions\n",
+    "plt.rcParams[\"figure.figsize\"] = [10, 5]\n",
+    "# set dpi to 500\n",
+    "plt.rcParams[\"figure.dpi\"] = 500\n",
+    "env = gym.make(\n",
+    "    \"MiniHack-Navigation-Custom-v0\",\n",
+    "    observation_keys=(\"chars\", \"pixel\"),\n",
+    "    des_file=\"maps/wrong_actions.des\",\n",
+    "    max_episode_steps=10000,\n",
+    ")\n",
+    "state = env.reset()\n",
+    "# env.render()\n",
+    "plt.imshow(state[\"pixel\"], aspect=\"auto\").set_data(state[\"pixel\"][:, 300:950])  # type: ignore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Wrong actions animation\n",
+    "plt.rcParams[\"figure.figsize\"] = [5, 5]\n",
+    "\n",
+    "image = plt.imshow(game[110:220, 540:690])\n",
+    "actions = [0, 0, 0, 0, 0, 0, 0, 0]\n",
+    "\n",
+    "for i, action in enumerate(actions):\n",
+    "    try:\n",
+    "        s, _, _, _ = env.step(action)\n",
+    "        display.display(plt.gcf())\n",
+    "        display.clear_output(wait=True)\n",
+    "        image.set_data(s[\"pixel\"][110:220, 540:690])\n",
+    "        # time.sleep(0.1)\n",
+    "        if i > 4:\n",
+    "            plt.title(f\"Wrong actions: {i-4}\")\n",
+    "        else:\n",
+    "            plt.title(f\"Wrong actions: 0\")\n",
+    "    except RuntimeError:\n",
+    "        print(\"YOU WON! <3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
